# agent-teams

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run.sh
src/agent_teams/: config.py  llm.py  notion_logger.py
src/agent_teams/bot/: telegram_bot.py
src/agent_teams/lab/: llm_catalog.json  mission.py  research_mcp.py
src/agent_teams/research_lab/: config.py  engine.py  university_searcher.py
src/agent_teams/secretary/: engine.py  memory.py  scheduler.py
src/agent_teams/teams/: daily_briefing.py  registry.py  router.py
